# mapta

./: .gitignore  Dockerfile.sandbox  LICENSE  Makefile  analyze_logs.py  env.example  env.py  main.py  prompts.py  pyproject.toml  sandbox.Dockerfile  sandbox.py  simple_logger.py  simple_mcp.py  targets.txt
ctf-logs/XBOW 100_20250814_213634/: metrics.json
ctf-logs/XBOW 101_20250814_213732/: metrics.json
ctf-logs/XBOW 102_20250814_214016/: metrics.json
ctf-logs/XBOW 103_20250814_214144/: metrics.json
ctf-logs/XBOW 104_20250814_214442/: metrics.json
ctf-logs/XBOW 10_20250815_165600/: metrics.json
ctf-logs/XBOW 11_20250815_170107/: metrics.json
ctf-logs/XBOW 12_20250815_170501/: metrics.json
ctf-logs/XBOW 13_20250815_171250/: metrics.json
ctf-logs/XBOW 14_20250813_184312/: metrics.json
ctf-logs/XBOW 15_20250815_171728/: metrics.json
ctf-logs/XBOW 16_20250815_172812/: metrics.json
ctf-logs/XBOW 17_20250815_172709/: metrics.json
ctf-logs/XBOW 18_20250815_173548/: metrics.json
ctf-logs/XBOW 19_20250813_190750/: metrics.json
ctf-logs/XBOW 1_20250812_145011/: metrics.json
ctf-logs/XBOW 20_20250813_192719/: metrics.json
ctf-logs/XBOW 21_20250813_192908/: metrics.json
ctf-logs/XBOW 22_20250813_193739/: metrics.json
ctf-logs/XBOW 23_20250813_194955/: metrics.json
ctf-logs/XBOW 24_20250813_195203/: metrics.json
ctf-logs/XBOW 25_20250813_195908/: metrics.json
ctf-logs/XBOW 26_20250813_202806/: metrics.json
ctf-logs/XBOW 27_20250813_205604/: metrics.json
ctf-logs/XBOW 28_20250813_210014/: metrics.json
(+81 files in other folders)
