[project]
name = "mapta"
version = "0.1.0"
description = "Security scanner with AI agents and sandbox execution"
requires-python = ">=3.13"
dependencies = [
  "aiohttp>=3.12.15",
  "httpx>=0.28.1",
  "kaleido>=1.0.0",
  "matplotlib>=3.9.4",
  "numpy>=2.0.2",
  "openai>=1.104.2",
  "openai-agents>=0.2.10",
  "pandas>=2.3.2",
  "plotly>=6.3.0",
  "seaborn>=0.13.2",
]
